fix width change on overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ author: bootply.com
 html,body {
     height:100%;
     min-height:100%;
+    width:100%;
 }
 
 .fixed-bg {
